--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta name="keywords" content="English Free learning, Free English Courses, How to learn English, Where to find English, Rapid English Learning, Free English, Fast English, Fast english Learning in Bangla, Go English, কিভাবে ফ্রিতে ইংরেজী শিখব, ফ্রি ইংরেজী, কিভাবে তাড়াতাড়ি ইংরেজী শিখব">
 <meta name="description" content="First-way English এ ফ্রিতে ইংরেজী শেখানো হয়। এখানে আপনি প্রতি চ্যাপ্টারের উপর ফ্রি ভিডিও টিউটোরিয়াল দেখতে পাবেন। ইংরেজী শিখতে চাইলে আমাদের সাথেই থাকুন।">
 <meta name="viewport" content="width=max-width, initial-sclae=1.0">
-<style>
+<link rel="icon" href="https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/favicon2.png">
+  <style>
 
   h2{
   font-family:"arial","helvetica", sans-serif;
