--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <head profile="https://redwan0hasan.github.io/profile">
   <link rel="icon" type="image/png" href="https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/favicon2.png>
   <style>
+  body {
+ background-image: url('')    
+ }                                        
 
   h2{
   font-family:"arial","helvetica", sans-serif;
