--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <link rel="icon" type="image/png" href="https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/favicon2.png>
   <style>
   body {
- background-image: url('')    
+ background-image: url('https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/facebook_cover_photo_1.png');
+ max-width: 100%;
+ height: 500px;
+ opacity: 0.5
+   
  }                                        
 
   h2{
