--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <head profile="https://redwan0hasan.github.io/profile">
   <link rel="icon" type="image/png" href="https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/favicon2.png>
   <style>
-body{  
+.class {  
  background-image: url('https://github.com/redwan0hasan/redwan0hasan.github.io/blob/master/facebook_cover_photo_1.png');
  max-width: 100%;
  height: 500px;
